--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "mysql2": "^2.1.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "pg": "^8.0.3",
     "pug": "^2.0.4",
     "sequelize": "^5.21.7"
   },
   "devDependencies": {
+    "heroku-cli": "^7.0.9",
     "nodemon": "^2.0.3",
     "sequelize-cli": "^5.5.1"
   }
