--- a/config/config.json
+++ b/config/config.json
@@ -20,7 +20,7 @@
     "dialect": "postgres",
     "protocol": "postgres",
     "dialectOptions": {
-      "ssl": true
+      "ssl": false
     }
   }
 }
