--- a/config/config.json
+++ b/config/config.json
@@ -20,7 +20,10 @@
     "dialect": "postgres",
     "protocol": "postgres",
     "dialectOptions": {
-      "ssl": false
+      "ssl": {
+        "require": true,
+        "rejectUnauthorized": false
+      }
     }
   }
 }
