--- a/resforum-vue/package.json
+++ b/resforum-vue/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "bootstrap": "^4.5.0",
     "core-js": "^3.6.4",
+    "moment": "^2.26.0",
+    "uuid": "^8.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6"
   },
